temp/objects/Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Claim__c</fullName>
        <label>Expense Claim</label>
        <referenceTo>Expense_Claim__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boarding</fullName>
                </value>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Other Airfare</fullName>
                </value>
                <value>
                    <fullName>Other Expenses</fullName>
                </value>
                <value>
                    <fullName>Travel by Own Car</fullName>
                </value>
                <value>
                    <fullName>Car Parking Charges</fullName>
                </value>
                <value>
                    <fullName>Visa Fees</fullName>
                </value>
                <value>
                    <fullName>Relocation Accommodation &amp; Conv.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOE</label>
        <referenceTo>SOE__c</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SOE__c</field>
                <operation>equals</operation>
                <valueField>Task__c.SOE__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Task__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Expenses</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Expense #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>